--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=gateway.eldercare
-spring.datasource.url=jdbc:postgresql://localhost:5432/oneup
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.url=jdbc:postgresql://ewr1.clusters.zeabur.com:32136/zeabur
+
+spring.datasource.username=root
+spring.datasource.password=q7C2npj8y0f4MsFLzNxgH91lP5V6iG3v
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
